--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "lucide-react": "^0.452.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
