--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "gdg-biet": "file:",
     "lucide-react": "^0.452.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
